# DLAI

./: .gitignore  README.md  output.json  pyproject.toml  pytest.ini  report.html  report_dashboard.html  requirements.txt
.github/workflows/: ci_dl_ai_test.yml
Notes/: AI_Notes.txt
maths/: dot.py  softmax.py  transpose.py
notes/: AI_Notes.txt  troubleshooting  troubleshooting.txt
src/: constants.py
src/dl/maths/: dot.py  softmax.py  transpose.py
src/llm/: AIModel.py  OllamaModel.py  OpenAIModel.py
tests/: test_dot.py  test_softmax.py  test_transpose.py
tests/dl/: test_dot.py  test_softmax.py
tests/llm/: test_ai_model.py
utilities/: utilities.py
